Upgrade DataSink methods